@@ -5,7 +5,6 @@ import pymc3.distributions.dist_math as pm_dist_math
 from .. import config
 
 _logger = logging.getLogger(__name__)
-_logger.setLevel(config.log_level)
 
 
 def get_normalized_prob_vector(prob_vector: np.ndarray, prob_sum_tol: float) -> np.ndarray:
@@ -30,31 +29,47 @@ def poisson_logp(mu, value):
     """
     Poisson log probability
 
-    Note:
-        Removed all assertions on the input parameters for speed. Be careful!
-
     :param mu: poisson mean
     :param value: observed
     :return: theano tensor
     """
-    return pm_dist_math.logpow(mu, value) - pm_dist_math.factln(value) - mu
+    return pm_dist_math.bound(
+        pm_dist_math.logpow(mu, value) - pm_dist_math.factln(value) - mu,
+        mu > 0, value >= 0)
 
 
 def negative_binomial_logp(mu, alpha, value):
     """
     Negative binomial log probability
 
-    Note:
-        Removed all assertions on the input parameters for speed. Be careful!
-
     :param mu: mean
     :param alpha: inverse over-dispersion
     :param value: observed
     :return: theano tensor
     """
-    return (pm_dist_math.binomln(value + alpha - 1, value)
-            + pm_dist_math.logpow(mu / (mu + alpha), value)
-            + pm_dist_math.logpow(alpha / (mu + alpha), alpha))
+    return pm_dist_math.bound(pm_dist_math.binomln(value + alpha - 1, value)
+                              + pm_dist_math.logpow(mu / (mu + alpha), value)
+                              + pm_dist_math.logpow(alpha / (mu + alpha), alpha),
+                              mu > 0, value >= 0, alpha > 0)
+
+
+# todo does this have a name?
+def centered_heavy_tail_logp(mu, value):
+    """
+    This distribution is obtained by taking X ~ Exp and performing a Bose transformation
+    Y = (exp(X) - 1)^{-1}. The result is:
+
+        p(y) = (1 + 2 \mu) y^{2\mu} (1 + y)^{-2(1 + \mu)}
+
+    It is a heavy-tail distribution with non-existent first moment.
+
+    :param mu: mode of the distribution
+    :param value: observed
+    :return: theano tensor
+    """
+    return pm_dist_math.bound(tt.log(1.0 + 2.0 * mu) + 2.0 * mu * tt.log(value)
+                              - 2.0 * (1.0 + mu) * tt.log(1.0 + value),
+                              mu >= 0, value > 0)
 
 
 def get_jensen_shannon_divergence(log_p_1, log_p_2):
